# Engine

./: .clang-format  .gitignore  .gitignore.save  CMakeLists.txt
assets/: object.json
assets/scene/: billiard.json  camera.json  light.json
assets/scene/objects/: borders.json  sphere.json  table.json
assets/shaders/: fragment.glsl  raymarch_fragment.glsl  vertex.glsl
assets/textures/: script_for_textures.py  textures_manifest.json
docs/: JSON.md  JSON_Отчет_Неделя_1.md  Materials_references.md  Rendering.md  Rendering_README.md  Roadmap.md  План_работ.md
include/: json_parser.h  object.h  shader.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: json_parser.cpp  main.cpp
src/bmp/: bmp.cpp  bmp.h
src/control/: camera_controller.cpp  camera_controller.h  controller.cpp  controller.h  property.cpp  property.h
src/core/: application.cpp  application.h
src/gl/: gl_renderer.cpp  gl_renderer.h  shader.cpp  shader.h
src/input/: input_controller.cpp  input_controller.h
src/math/: vec.h  vec_functions.h
src/physics/: physics_body.cpp  physics_body.h  physics_engine.cpp  physics_engine.h  physics_material.h
src/render/: RGB.cpp  RGB.h  app_utils.cpp  app_utils.h  camera.cpp  camera.h  camera_parser.cpp  camera_parser.h  controller.cpp  controller.h  gpu_data.h  json_utils.h  light_parser.cpp  light_parser.h  light_source.cpp  light_source.h  light_source_global.cpp  light_source_global.h  light_source_point.cpp  light_source_point.h  material.cpp  material.h  material_converter.cpp  material_converter.h  material_pbr.cpp  material_pbr.h  material_phong.cpp  material_phong.h  object_parser.cpp  object_parser.h  physics_engine.cpp  physics_engine.h  property.cpp  property.h  raw_image.cpp  raw_image.h  ray.cpp  ray.h  render.h  renderer.cpp  (+16 more)
tests/: physics_test_scene.json
tests/objects/: test_spheres.json
